using json parser

--- a/src/meson.build
+++ b/src/meson.build
@@ -6,7 +6,7 @@ plugin_sources = [
 gstwebsockettransceiver = library('gstwebsockettransceiver',
   plugin_sources,
   c_args: ['-DPACKAGE="gst-websockettransceiver"'],
-  dependencies: [gst_dep, gst_base_dep, gst_audio_dep, glib_dep, soup_dep],
+  dependencies: [gst_dep, gst_base_dep, gst_audio_dep, glib_dep, soup_dep, json_dep],
   install: true,
   install_dir: plugins_install_dir,
 )
