--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Build
       run: meson compile -C build
 
+    - name: Run tests
+      run: meson test -C build -v
+
     - name: Static analysis
       run: meson compile -C build cppcheck
 
@@ -57,6 +60,9 @@ jobs:
 
     - name: Build
       run: meson compile -C build
+
+    - name: Run tests
+      run: meson test -C build -v
 
     - name: Static analysis
       run: meson compile -C build cppcheck
